tests/derive_ui/tuple_struct.stderr
error: `#[derive(Parser)]` only supports non-tuple structs and enums
  --> tests/derive_ui/tuple_struct.rs:11:10
   |
11 | #[derive(Parser, Debug)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `Parser` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `parse` found for struct `Opt` in the current scope
  --> tests/derive_ui/tuple_struct.rs:16:20
   |
13 | struct Opt(u32);
   | ---------- function or associated item `parse` not found for this struct
...
16 |     let opt = Opt::parse();
   |                    ^^^^^ function or associated item not found in `Opt`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `parse`, perhaps you need to implement one of them:
           candidate #1: `Parser`
           candidate #2: `TypedValueParser`
